--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
     --dark-ternary: #c8c8c8;
     --white: #fff;
 }*/
+
 :root {
     --primary: #007200;
     --secondary: #45CE67; 
@@ -16,7 +17,9 @@
     --dark-ternary: #c8c8c8;
     --white: #fff;
 }
-
+body{
+  background-color: var(--transparent-secondary);
+}
 html{
     scroll-behavior: smooth;
 }
