--- a/client/src/App.css
+++ b/client/src/App.css
@@ -154,76 +154,15 @@ a{
   }
   /* End SideBar */
   
-  .card__title{
-    color: var(--primary);
-    font-weight: bold;
+  li{
+    list-style: none;
   }
   
-  .card__rate{
-    font-size: 20px;
-    color: #555;
-    display: flex;
-    align-items: center;
-  }
-  
-  .ingredints{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding-left: 25px;
-    height: 90px;
-  }
-  .ingredints li{
-    width: 50%;
-    font-size: 18px;
-    color: #888;
-    list-style-type: none;
-    margin: 3px 0;
-  }
-  
-  .card__footer,
-  .card__inputs,
-  .card__count{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .card__footer .price{
-    font-size: 20px;
-    font-weight: 600;
-    flex: 75%;
-    color: #555;
-  }
   
   .card__footer .price span{
     color: var(--primary);
   }
   
-  .card__inputs{
-    flex: 25%;
-  }
-  
-  .plus{
-    width: 40px;
-    height: 40px;
-    background-color: var(--primary);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    cursor: pointer;
-  }
-  
-  .plus:first-child{
-    left: 1px;
-  }
-  .plus:last-child{
-    right: 20px;
-  }
-  p{
-    line-height: .8cm;
-  }
   .reigester{
     align-items: center;
   }
@@ -252,6 +191,7 @@ a{
   .input__box{
     padding: 8px;
   }
+
   .login__input{
     width: 100%;
     height: 45px;
@@ -260,6 +200,7 @@ a{
     border-radius: 5px;
     padding-left: 10px;
   }
+
   .login__input::placeholder{
     font-size: 13px;
     color: #bbb;
